Solution[Java]: bug 修正